[package]
name = "goabase-bot"
version = "0.1.0"
authors = ["daklon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.2.0"
log = "0.4.8"
tokio = { version = "0.2.11", features = ["full"] }
pretty_env_logger = "0.4.0"
reqwest = { version = "0.10", features = ["blocking","json"] }
serde_json = "1.0"
serde = "1.0.104"
